# CDVE

./: .gitignore  README.md  package-lock.json
admin/: app.py  pyproject.toml
admin/admin/: app.py
admin/admin/public/: style.css
admin/admin/src/: __init__.py
admin/admin/src/core/board/: database.py  issue.py  seeds.py
admin/admin/src/templates/: Pagos.html
admin/public/: error.css  style.css
admin/src/: __init__.py  config.py
admin/src/controllers/: disciplinas.py  issues.py
admin/src/core/: database.py  seeds.py
admin/src/core/board/: __init__.py  carnet.py  configuracion.py  cuota.py  database.py  disciplina.py  disciplinas.py  inscripcion.py  pago.py  permiso.py  rol.py  seeds.py  socio.py  usuario.py  usuario_tiene_rol.py
admin/src/core/forms/: auth_form.py  configuration_form.py  disciplinas_form.py  pagos_form.py  socio_form.py  usuarios_form.py
admin/src/templates/: disciplinas.html  error.html  home.html  layout.html
admin/src/templates/issues/: disciplinas.html
admin/src/templates/socios/: socios.html
admin/src/templates/usuarios/: usuarios.html
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: api.py  auth.py  configuracion.py  disciplinas.py  forms.py  inscripciones.py  pagos.py  perfil.py  socios.py  usuarios.py
admin/src/web/helpers/: auth.py  handlers.py  percentage.py  uploads_path.py
admin/src/web/templates/: base.html  configuracion.html  create_socio.html  disciplinas.html  editDisciplina.html  error.html  home.html  layout.html  nuevoSocio.html  nuevoUsuario.html  socio.html  socios.html
(+78 files in other folders)
