[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Pablo Ormeño <pablo.d.ormeno@ygmail.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
