[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Pablo Ormeno <pablo.d.ormeno@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
psycopg2-binary = "^2.9.4"
flask-sqlalchemy = "^3.0.2"


[tool.poetry.group.dev.dependencies]
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


